--- a/package.json
+++ b/package.json
@@ -67,14 +67,14 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.25.9",
     "@hot-loader/react-dom": "^16.11.0",
     "@sentry/webpack-plugin": "^1.8.0",
     "autoprefixer": "^9.4.9",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-react-require": "^3.1.1",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "core-js": "3",
     "dotenv": "^6.0.0",
     "dotenv-expand": "^5.1.0",
@@ -88,27 +88,32 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
     "lint-staged": "^9.4.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss-inline-svg": "^3.0.0",
     "react-hot-loader": "^4.12.19",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
-    "reload-html-webpack-plugin": "^0.1.2",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "snazzy": "^8.0.0",
     "standard-engine": "^10.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-scss": "^3.9.0",
-    "webpack": "^4.47",
+    "webpack": "^5.96.1",
     "webpack-blocks": "^2.1.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.2",
-    "write-file-webpack-plugin": "^4.5.0"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "write-file-webpack-plugin": "^4.5.1"
+  },
+  "resolutions": {
+    "node-sass": "npm:no-op@latest"
   }
 }
