--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "lint:fix": "yarn run eslint:fix && yarn run stylelint:fix",
     "eslint": "node linter --verbose | snazzy",
     "eslint:fix": "node linter --fix --verbose | snazzy",
-    "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
-    "stylelint:fix": "stylelint 'src/**/*.scss' --syntax scss --fix",
+    "stylelint": "stylelint 'src/**/*.scss' scss",
+    "stylelint:fix": "stylelint 'src/**/*.scss' --fix",
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
     "@babel/plugin-proposal-decorators": "^7.25.9",
     "@babel/plugin-proposal-function-sent": "^7.25.9",
     "@babel/plugin-proposal-throw-expressions": "^7.25.9",
@@ -71,7 +72,6 @@
     "@hot-loader/react-dom": "^16.11.0",
     "@sentry/webpack-plugin": "^1.8.0",
     "autoprefixer": "^9.4.9",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^9.2.1",
     "babel-plugin-react-require": "^4.0.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -81,13 +81,14 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.3",
-    "eslint": "^4.11.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.13.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-standard": "^5.0.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
@@ -103,10 +104,10 @@
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "snazzy": "^8.0.0",
-    "standard-engine": "^10.0.0",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.9.0",
+    "standard-engine": "^15.1.0",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-scss": "^6.10.0",
     "webpack": "^5.96.1",
     "webpack-blocks": "^2.1.0",
     "webpack-cli": "^5.1.4",
