--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     docker:
       # legacy node
-      - image: circleci/node:8.11.3
+      - image: cimg/node:18.18.0
 
     working_directory: ~/frontend-skeleton
 
