temporary disable tests, as we have no tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,6 @@ jobs:
           name: Check Code Style
           command: yarn lint
 
-      - run:
-          name: Run Tests
-          command: yarn test
+      #- run:
+      #    name: Run Tests
+      #    command: yarn test
